# Blur-AutoClickerMAC

./: README.md  Readme.md  main.py  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
UI/: ui_main_window.py
src/: App.tsx  cadence.ts  index.css  settingsSchema.ts  store.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  hotkeys.rs  lib.rs  overlay.rs  ui_commands.rs
src-tauri/src/engine/: failsafe.rs  mod.rs  mouse.rs  stats.rs  worker.rs
src-tauri/src/settings/: mod.rs
src/Py/: settings_manager.py  telemetry.py  update_checker.py
src/Rust/: clicker_engine.rs
src/components/: CadenceInput.tsx  HotkeyCaptureInput.tsx  TitleBar.css  Updatebanner.css  Updatebanner.tsx
src/components/panels/: AdvancedPanelLayout.tsx  Modes.css  SettingsPanel.css  SimplePanel.css  SimplePanel.tsx
src/components/panels/advanced/: SequenceSection.tsx  shared.tsx
src/components/panels/zones/: CustomStopZoneSection.tsx
src/locales/: ar.json  de.json  en.json  es.json  fr.json
